# miccai2024_midi-b-submission

./: .env  .gitignore  README.md  TODOs_15.07.2024  base-anonymizer.py  data-exploration.ipynb  deid-model-exploration.ipynb  deid.py  evaluation.py  main.py  nohup.out  nohup_old.out  ocr-model-exploration.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: data-exploration-checkpoint.ipynb  ocr-model-exploration-checkpoint.ipynb
data/: Pseudo-PHI-DICOM-Dataset-patid_crosswalk.csv  Pseudo-PHI-DICOM-Dataset-uid_crosswalk.csv  Pseudo-Phi-DICOM-Evaluation-dataset-April-7-2021.tcia  get_data.py
dcm_anonymizers/: anonymizer.py  img_anonymizers.py  phi_detectors.py  private_tags_extractor.py  ps3.3_profile_attrs.json  ps_3_3.py  tcia_deid.py  utils.py
dcm_anonymizers/.ipynb_checkpoints/: tcia_deid-checkpoint.py
dcm_deidentifiers/: deidentifier.py  img_deidentifier.py  phi_detectors.py  private_tags_extractor.py  ps_3_3.py  tcia_deid.py  tcia_deid_attrs.json  tcia_private_tags_dict.json
dcm_validator/: dciodvfy.py
deid_app/: robust_app.py
deid_app/.ipynb_checkpoints/: text_deid-checkpoint.py
docs/: .~lock.TCIAPrivateTagKB-02-01-2024-formatted.csv#  TCIAPrivateTagKB-02-01-2024-formatted.csv  hippa_safe_harbour_rules.html  ps3.3_profile_attrs.json  rules.html  tcia_supplied_deid_attrs.json
notebooks/: DCMRobustPHIDetector_exp.ipynb  data-exploration.ipynb  dicom-validation.ipynb  evaluation.ipynb  exp_decprenacy_report.ipynb  exp_test_data.ipynb  exp_validation_data.ipynb  expl_private_tags_v2.ipynb  explr_private_tags.ipynb  extract_hippa_rules.ipynb  ocr-model-exploration.ipynb  paddleocr-expl.ipynb  validation_output_testing.ipynb  validation_rules.ipynb
notebooks/.ipynb_checkpoints/: DCMRobustPHIDetector_exp-checkpoint.ipynb  Untitled-checkpoint.ipynb  data-exploration-checkpoint.ipynb  deid-model-exploration-checkpoint.ipynb  dicom-validation-checkpoint.ipynb  evaluation-checkpoint.ipynb  exp_decprenacy_report-checkpoint.ipynb  exp_test_data-checkpoint.ipynb  exp_validation_data-checkpoint.ipynb  expl_private_tags_v2-checkpoint.ipynb  explr_private_tags-checkpoint.ipynb  extract_hippa_rules-checkpoint.ipynb  (+5 more)
utils/: dataloaders.py  display.py  plot_dicom_difference.py
