[tool.poetry]
name = "dkfz-dicom-deid"
version = "0.1.0"
description = ""
authors = ["rajesh.baidya <rajesh.baidya@dkfz-heidelberg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
pydicom = "^2.4.4"
matplotlib = "^3.9.0"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
torch = "^2.3.1"
transformers = "^4.41.2"
ipywidgets = "^8.1.3"
torchvision = "^0.18.1"
opencv-python = "^4.6.0.66"
dicom-anonymizer = "^1.0.12"
paddlepaddle-gpu = "^2.6.1"
paddleocr = "^2.0.1"
scikit-learn = "^1.5.1"
spacy = "^3.7.5"
nltk = "^3.8.1"
stanza = "^1.8.2"
robust-deid = "^0.3.1"
pycorenlp = "^0.3.0"
datasets = "^2.21.0"
seqeval = "^1.2.2"
en_core_sci_sm = {url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_sm-0.5.4.tar.gz"}
en_core_sci_lg = {url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_lg-0.5.4.tar.gz"}
setuptools = "^72.2.0"
accelerate = "^0.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
